2004-05-10    <cracoucas42@localhost>

	* src/pitivi-newprojectwindow.c: Affichage de la description correspondant a la categorie ou sous-categorie selectionnee dans l arbre des pre-reglages
	

2004-05-10    <bilboed@localhost>

	* ChangeLog: creation
	
